[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QAPy"
description = "A QAP compiler in Python"
version = "0.1.0"
authors = [
  { name = "Jemtaly" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dill>=0.4.0",
  "pymcl @ git+https://github.com/Jemtaly/pymcl.git@main",
]

[project.scripts]
qapy = "qapy.cli:main"
qapy-test = "qapy.test:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
