[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QAPy"
description = "A zero-knowledge proof system for Quadratic Arithmetic Programs (QAP) with Groth16 implementation."
version = "0.1.0"
authors = [
    { name = "Jemtaly" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["zero-knowledge proof", "zk-SNARK", "cryptography", "QAP", "Groth16"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.10"
dependencies = [
    "dill>=0.4.0",
    "pymcl==1.0.2",
]

[project.scripts]
qapy = "qapy.cli:main"
qapy-test = "qapy.test:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
